fix overlap menu (#18)

--- a/css/sr5.css
+++ b/css/sr5.css
@@ -1173,6 +1173,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #chat-log .message .SR-CardButton .opposedTest:hover {
   color: #000001;
+  box-shadow: none;
 }
 #chat-log .message .SR-CardButton .nonOpposedTest {
   background-color: #000001;
@@ -1192,6 +1193,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #chat-log .message .SR-CardButton .nonOpposedTest:hover {
   color: #0c9394;
+  box-shadow: none;
 }
 .SR5-message-edit {
   width: 20px;
@@ -3990,19 +3992,22 @@ input[type=range]:focus::-ms-fill-upper {
   height: 29px;
   border-bottom: 1px solid #0c9394;
 }
-.sidebar-tab button {
+.sidebar-tab .directory-header {
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: 2px solid #0c9394;
+}
+.sidebar-tab .directory-header button {
   position: relative;
   display: block;
+  line-height: 20px;
   color: #fffffe;
   font-family: "Njord Regular";
   text-transform: uppercase;
   font-size: 0.9em;
   text-align: center;
-  text-decoration: none;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
   border-radius: 3px;
+  text-decoration: none;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -o-transition: all 1s ease;
@@ -4011,17 +4016,17 @@ input[type=range]:focus::-ms-fill-upper {
   background: rgba(0, 0, 1, 0.3);
   z-index: 1;
 }
-.sidebar-tab button:hover:not(.SR-CardButtonHit) {
+.sidebar-tab .directory-header button:hover {
   color: #000001;
   background-color: transparent;
   box-shadow: none;
 }
-.sidebar-tab button:hover:before:not(.SR-CardButtonHit) {
+.sidebar-tab .directory-header button:hover:before {
   left: 0%;
   right: auto;
   width: 100%;
 }
-.sidebar-tab button:before:not(.SR-CardButtonHit) {
+.sidebar-tab .directory-header button:before {
   display: block;
   position: absolute;
   top: 0px;
@@ -4030,14 +4035,9 @@ input[type=range]:focus::-ms-fill-upper {
   width: 0px;
   z-index: -1;
   content: '';
-  color: #000001 !important;
+  color: #000001;
   background: #0c9394;
   transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
-}
-.sidebar-tab .directory-header {
-  padding-bottom: 5px;
-  margin-bottom: 5px;
-  border-bottom: 2px solid #0c9394;
 }
 .sidebar-tab .directory-header .header-search input {
   font-family: "amplitude_regular";
@@ -4079,7 +4079,6 @@ input[type=range]:focus::-ms-fill-upper {
   -moz-transition: all 1s ease;
   -o-transition: all 1s ease;
   transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
-  z-index: 1;
 }
 .sidebar-tab .directory-list li.folder.collapsed > .folder-header:hover {
   background-color: transparent;
@@ -4097,7 +4096,6 @@ input[type=range]:focus::-ms-fill-upper {
   right: 0px;
   height: 100%;
   width: 0px;
-  z-index: -1;
   content: '';
   background: rgba(12, 147, 148, 0.25);
   transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
@@ -4422,7 +4420,6 @@ input[type=range]:focus::-ms-fill-upper {
   -moz-transition: all 1s ease;
   -o-transition: all 1s ease;
   transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
-  z-index: 1;
 }
 #compendium li.compendium-pack:not(:last-child) {
   box-shadow: 0 1px 0 rgba(147, 16, 4, 0.5);
@@ -4443,7 +4440,6 @@ input[type=range]:focus::-ms-fill-upper {
   right: 0px;
   height: calc(100% - 2px);
   width: 0px;
-  z-index: -1;
   content: '';
   background: rgba(12, 147, 148, 0.25);
   background-origin: border-box;
@@ -4715,7 +4711,6 @@ input[type=range]:focus::-ms-fill-upper {
   -moz-transition: all 1s ease;
   -o-transition: all 1s ease;
   transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
-  z-index: 1;
 }
 [id^=app-] .compendium.directory li.directory-item:not(:last-child) {
   box-shadow: 0 1px 0 rgba(147, 16, 4, 0.5);
@@ -4736,7 +4731,6 @@ input[type=range]:focus::-ms-fill-upper {
   right: 0px;
   height: calc(100% - 2px);
   width: 0px;
-  z-index: -1;
   content: '';
   background: rgba(12, 147, 148, 0.25);
   background-origin: border-box;
