--- a/less/roll-message.less
+++ b/less/roll-message.less
@@ -188,6 +188,7 @@
 
         &:hover {
           color: @neutralDarkColor;
+          box-shadow: none;
         }
       }
 
@@ -211,6 +212,7 @@
 
         &:hover {
           color: @subColor;
+          box-shadow: none;
         }
       }
     }
